force-app/main/default/objects/Approvers_Matrix__c/Approvers_Matrix__c.object-meta.xml
<CustomObject>
    <label>Approver Matrix</label>
    <nameField>
        <label>Approvers Matrix Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Approvers Matrix</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>