force-app/main/default/objects/Approvers_Matrix__c/fields/Deal_ACV_Upper_Limit__c.field-meta.xml
<CustomField>
    <fullName>Deal_ACV_Upper_Limit__c</fullName>
    <label>Deal ACV Upper Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>