force-app/main/default/objects/Approvers_Matrix__c/fields/Sales_Segment_Lead_Approver__c.field-meta.xml
<CustomField>
    <fullName>Sales_Segment_Lead_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Segment Lead Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Approvers_Matrix1</relationshipName>
    <type>Lookup</type>
</CustomField>