force-app/main/default/objects/Approvers_Matrix__c/fields/Services_Segment_Lead_Approver__c.field-meta.xml
<CustomField>
    <fullName>Services_Segment_Lead_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Services Segment Lead Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Approvers_Matrix6</relationshipName>
    <type>Lookup</type>
</CustomField>