force-app/main/default/objects/Approvers_Matrix__c/fields/SVP_Finance__c.field-meta.xml
<CustomField>
    <fullName>SVP_Finance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created a part of updated Approver mentioned BIZ-46974</description>
    <label>SVP Finance</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Approvers_Matrix8</relationshipName>
    <type>Lookup</type>
</CustomField>