force-app/main/default/objects/Approvers_Matrix__c/fields/SVP_Services_Approver__c.field-meta.xml
<CustomField>
    <fullName>SVP_Services_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SVP, Services Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Approvers_Matrix7</relationshipName>
    <type>Lookup</type>
</CustomField>