force-app/main/default/objects/Approvers_Matrix__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Sales_Segment__c</columns>
    <columns>Approver_Role__c</columns>
    <columns>Approver_User__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>