force-app/main/default/objects/Approvers_Matrix__c/listViews/KGS_Approval_matrix.listView-meta.xml
<ListView>
    <fullName>KGS_Approval_matrix</fullName>
    <columns>Sales_Segment__c</columns>
    <columns>Type__c</columns>
    <columns>Sales_Segment_Lead_Approver__c</columns>
    <columns>Industry_Sales_Lead_Approver__c</columns>
    <columns>CRO_Approver__c</columns>
    <columns>COO_Approver__c</columns>
    <columns>SVP_Finance__c</columns>
    <columns>Services_Segment_Lead_Approver__c</columns>
    <columns>SVP_Services_Approver__c</columns>
    <columns>CPO_Approver__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Segment__c</field>
        <operation>notContain</operation>
        <value>OLD</value>
    </filters>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Quote</value>
    </filters>
    <label>KGS Approval matrix</label>
</ListView>