force-app/main/default/objects/Approvers_Matrix__c/listViews/Quote_approver_lookup.listView-meta.xml
<ListView>
    <fullName>Quote_approver_lookup</fullName>
    <columns>Sales_Segment__c</columns>
    <columns>Type__c</columns>
    <columns>Sales_Segment_Lead_Approver__c</columns>
    <columns>Industry_Sales_Lead_Approver__c</columns>
    <columns>COO_Approver__c</columns>
    <columns>CRO_Approver__c</columns>
    <columns>Industry_President_Approver__c</columns>
    <columns>SVP_Finance__c</columns>
    <columns>Services_Segment_Lead_Approver__c</columns>
    <columns>SVP_Services_Approver__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>None,Quote</value>
    </filters>
    <label>Quote approver lookup</label>
</ListView>